2008-01-05  Andreas Kirschbaum

	* ragnorok: Improve scrolling in inventory dialog.

	* skin: Add support for command lists executing if at least one
	sub-command can execute.

2007-12-23  Andreas Kirschbaum

	* Remember last used player name.

	* Implement overview map display.

2007-12-22  Andreas Kirschbaum

	* Fix multi-tile monsters sometimes leaving behind ghost images.

2007-12-21  Andreas Kirschbaum

	* Prune old messages from the message window.

2007-12-20  Andreas Kirschbaum

	* Save position and stacking order of dialogs.

	* Remove 'dialog_state' skin command.

2007-12-19  Andreas Kirschbaum

	* Make dialogs movable.

	* Use different background colors for active and inactive text
	input fields.

	* Close message window after command input if it was opened
	automatically.

2007-12-18  Andreas Kirschbaum

	* Fix display issues with uncached multi-tile images.

	* Fix deadlock when using --server option.

	* Do not fail if ~/.crossfire does not exist.

	* Add --debug-protocol option to log protocol messages.

2007-12-17  Andreas Kirschbaum

	* Fix race condition when connecting to the server fails.

	* Cache metaserver information; use it if the metaserver is not
	available or if a server disappears from the metaserver.

	* Do not query metaserver too often.

2007-12-16  Andreas Kirschbaum

	* Add support for sound2 protocol command. Add sounds for player
	death and magic bullet.

	* Add sound support for more than one concurrent sound effect, and
	for per-map background music.

2007-12-15  Andreas Kirschbaum

	* Add setup option to disable sound. (ragnorok)

	* Add sound support. Use it for poison warning.

	* Do not query metaserver with --server. Re-query metaserver after
	each connection attempt.

	* Do not crash when metaserver is not available.

2007-12-14  Andreas Kirschbaum

	* Do not crash if the server connection breaks. Change ESC
	behavior: disconnect from server if connected or exit application
	if not connected.
